correcion visualizacion info en distintos modulos